--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 *::after{
     padding: 0;
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Courier New', Courier, monospace
 }
 
 .calculator-body{
@@ -27,10 +27,11 @@ button, input{
     color: white;
     border-radius: 20px;
     margin: 5px;
-    box-shadow:0px 0px 30px 10px rgb(44, 44, 44)
+    box-shadow:0px 0px 5px 5px rgb(44, 44, 44)
 }
 
 input{
     padding: 30px;
     margin-bottom: 20px;
+    font-size: 24px;
 }
